Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="connor-cook" class="anchor" href="#connor-cook" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connor Cook<img src="http://2.bp.blogspot.com/-f6HlB-nFQDc/Tzi9yoiiAoI/AAAAAAAAANI/eXbM2O-L2LY/s1600/moonlight+night.jpg" alt="moonlight">
-</h1>
+<a id="connor-cook" class="anchor" href="#connor-cook" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connor Cook</h1>
+
+<p><img src="week3/moonlight_night.png" alt="moonlight"></p>
       </section>
     </div>
 
