--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
 <a id="connor-cook" class="anchor" href="#connor-cook" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connor Cook</h1>
 
-<p><img src="week3/moonlight_night.png" alt="moonlight"></p>
+<p><img src="http://2.bp.blogspot.com/-f6HlB-nFQDc/Tzi9yoiiAoI/AAAAAAAAANI/eXbM2O-L2LY/s1600/moonlight+night.jpg" alt="moonlight"></p>
       </section>
     </div>
 
